remove and update  the cart
